maalstroom/resources/style.css
/* ... */
.inactive-notify {
    float: right;
    height: 17px;
    border-radius: 10px;
    border: 1px solid #b6b6b6;
    background-color: #b6b6b6;
    margin: 0 auto;
    font-size: 9px;
   padding-left: 6px;
   padding-right: 7px;
   padding-top: 2px;
   color: #ffffff;
   font-weight: bold;
}
.mailbox-pad {
  padding-left: 4.8em;
  padding-bottom: .5em;
  padding-top: .5em;
  padding-right: .5em;
}
.inbox-icon-active {
  background: url("images/inbox_white.png") no-repeat center left;
  background-position: 30px;
}
.inbox-icon {
  background: url("images/inbox.png") no-repeat center left;
  background-position: 30px;
}
.inbox-icon:hover {
  background: url("images/inbox_white.png") no-repeat center left;
  background-position: 30px;
}
.sent-icon {
  background: url("images/sent.png") no-repeat center left;
  background-position: 28px;
}
.sent-icon:hover {
  background: url("images/sent_white.png") no-repeat center left;
  background-position: 28px;
}
.drafts-icon {
  background: url("images/draft.png") no-repeat center left;
  background-position: 30px;
}
.drafts-icon:hover {
  background: url("images/draft_white.png") no-repeat center left;
  background-position: 30px;
}
.tag-icon {
  background: url("images/tags.png") no-repeat center left;
  background-position: 30px;
}
.tag-icon:hover {
  background: url("images/tags_white.png") no-repeat center left;
  background-position: 30px;
}
.bullet {
  background: url("images/bullet.png") no-repeat center left;
  background-position: 37px;
}
.bullet:hover {
  background: url("images/bullet_white.png") no-repeat center left;
  background-position: 37px;
}
.mailbox-list li {
}
.active-mailbox {
  background-color: #575c6f;
  color: #ffffff;
}
.active-mailbox a {
  color: #ffffff;
}
.mailbox-list li:hover {
  background-color: #38A3AF;
}
.mailbox-list li:hover a {
  color: #ffffff;
}
.mailbox-list a:visited {
  color: #141c30;
}
.divider {
  background: url("images/divider.gif") no-repeat top left;
  width: 163px;
  height: 5px;
  margin-left: 2.5em;
}
.tag-head li {
  padding-bottom: .4em;
  padding-top: .1em;
  padding-right: .6em;
}
.tag-head li:hover {
  background-color: #38A3AF;
}
.tag-head li:hover a {
  color: #ffffff;
}
.tag-head a:visited {
  color: #141c30;
}
.tag-list li {
  padding-top: .2em;
  padding-bottom: .2em;
  padding-right: 2em;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;  // IE 6+, FF 7+, Op 11+, Saf 1.3+, Chr 1+
  -o-text-overflow: ellipsis;  // for Opera 9 & 10
  display: block;
}
.tag-list li:hover {
  background-color: #38A3AF;
}
.tag-list li:hover a {
  color: #ffffff;
}
.tag-list a:visited {
  color: #141c30;
}

/*Styles for top navigation*/

.right-bar {
    color: #ffffff;
}
.logo {
    color: #ffffff;
    height: 3.8em;
    width: 97px;
    float: left;
}
.version {
  color: #999ba0;
  font-style: italic;
  font-size: 9px;
  float: left;
  padding-top: 14px;
  padding-left: 5px;
  line-height: 14px;
}
.version a {
    color: red;
    font-style: normal;
    font-weight: bold;
}

.connections {
  font-size: 10px;
}
.refresh-block {
  float: left;
  height: 3.8em;
  width: 55px;
  background-color: #1f2b4a;
  padding-left: 17px;
  margin-right: 20px;
  padding-top: 13px;
}
.refresh {
  background: url("images/refresh.png") no-repeat center center;
  height: 22px;
  width: 22px;
}
/* Create the animation blocks */
@keyframes spin {
	from { transform: rotate(0deg); }
	to { transform: rotate(360deg); }
}
.refresh:hover {
	animation-name: spin; 
	animation-duration: 3s; /* 3 seconds */
	animation-iteration-count: infinite; 
	animation-timing-function: linear;
}
.left-icons {
  color: #ffffff;
  width: 100%;
  display: inline;
  position: relative;
  float: left;
}
.left-icons li {
  display: inline;
  padding: 1.8em;
  margin: 0;
}
.left-icons ul {
  padding-top: .2em;
}
nav a {
  color: #38a3af;
}

nav a:link {
  color: #38a3af;
}
nav a:visited {
  color: #38a3af;
}
nav a:hover {
  color: #ffffff;
}
.right-icons {
    color: #ffffff;
    border: 0;
    float: right;
    display: inline;
    position: absolute;
    top: 0;
    right: 0;
}
.right-icons ul {
  margin: 2px;
  padding-top: .4em;
}
.right-icons li {
  display: inline;
  margin: 0;
  padding-right: 2em;
}
.mail-wrapper {
  float: right;
}
#mail-icon {
    background: url("images/mail_icon.png") no-repeat right top;
    border: 0;
    height: 29px;
    width: 29px;
}
.mail-icon-number {
    float: right;
    height: 16px;
    border-radius: 10px;
    border: 1px solid #141c30;
    background-color: #b025be;
   font-size: 8px;
   padding-left: .5em;
   padding-right: .7em;
   padding-top: .2em;
   color: #ffffff;
   font-weight: bold;
}
#list-addresses {
    background: url("images/list_addresses.png") no-repeat top left;
    display: inline-block;
    height: 20px;
    width: 16px;
    margin-top: 1.4em;
    margin-right: 1em;
}
#new-address {
    background: url("images/add_address.png") no-repeat top left;
    display: inline-block;
    height: 20px;
    width: 16px;
    margin-top: 1.4em;
    margin-right: 1em;
}
#addressbook {
    background: url("images/addressbook.png") no-repeat top left;
    display: inline-block;
    height: 20px;
    width: 16px;
    margin-top: 1.4em;
    margin-right: 1em;
}
#settings {
    background: url("images/settings.png") no-repeat top left;
    display: inline-block;
    height: 20px;
    width: 16px;
    margin-top: 1.4em;
    margin-right: 1.5em;
}
.nav-new-icon {
  background: url("images/compose_blue.png") no-repeat left center;
}
.nav-new-icon:hover {
  background: url("images/compose_white.png") no-repeat left center;
}
.nav-reply-icon {
  background: url("images/reply_blue.png") no-repeat left center;
}
.nav-reply-icon:hover {
  background: url("images/reply_white.png") no-repeat left center;
}
.nav-delete-icon {
  background: url("images/trash_blue.png") no-repeat left center;
}
.nav-delete-icon:hover {
  background: url("images/trash_white.png") no-repeat left center;
}
/* ... */

